--- a/tutorials/creation_graph/custom_geometry_node.html
+++ b/tutorials/creation_graph/custom_geometry_node.html
@@ -223,7 +223,7 @@ strides[TM_VERTEX_SEMANTIC_POSITION] = sizeof(tm_triangle_vertex_t);
 strides[TM_VERTEX_SEMANTIC_NORMAL] = sizeof(tm_triangle_vertex_t);
 strides[TM_VERTEX_SEMANTIC_COLOR0] = sizeof(tm_triangle_vertex_t);
 
-void *cbuf = (void *)&amp;constants;
+const void *cbuf = (const void *)&amp;constants;
 tm_shader_api-&gt;update_constants_raw(io, res_buf, &amp;cbuffer-&gt;instance_id, &amp;cbuf, 0, sizeof(tm_shader_vertex_buffer_system_t), 1);
 
 uint32_t pos_buffer_slot, normal_buffer_slot, color_buffer_slot;
@@ -355,7 +355,7 @@ static void triangle_node__compile(tm_creation_graph_interpreter_context_t *ctx,
             strides[TM_VERTEX_SEMANTIC_NORMAL] = sizeof(tm_triangle_vertex_t);
             strides[TM_VERTEX_SEMANTIC_COLOR0] = sizeof(tm_triangle_vertex_t);
 
-            void *cbuf = (void *)&amp;constants;
+            const void *cbuf = (const void *)&amp;constants;
             tm_shader_api-&gt;update_constants_raw(io, res_buf, &amp;cbuffer-&gt;instance_id, &amp;cbuf, 0, sizeof(tm_shader_vertex_buffer_system_t), 1);
 
             uint32_t pos_buffer_slot, normal_buffer_slot, color_buffer_slot;
