--- a/tutorials/print.html
+++ b/tutorials/print.html
@@ -684,7 +684,7 @@ strides[TM_VERTEX_SEMANTIC_POSITION] = sizeof(tm_triangle_vertex_t);
 strides[TM_VERTEX_SEMANTIC_NORMAL] = sizeof(tm_triangle_vertex_t);
 strides[TM_VERTEX_SEMANTIC_COLOR0] = sizeof(tm_triangle_vertex_t);
 
-void *cbuf = (void *)&amp;constants;
+const void *cbuf = (const void *)&amp;constants;
 tm_shader_api-&gt;update_constants_raw(io, res_buf, &amp;cbuffer-&gt;instance_id, &amp;cbuf, 0, sizeof(tm_shader_vertex_buffer_system_t), 1);
 
 uint32_t pos_buffer_slot, normal_buffer_slot, color_buffer_slot;
@@ -816,7 +816,7 @@ static void triangle_node__compile(tm_creation_graph_interpreter_context_t *ctx,
             strides[TM_VERTEX_SEMANTIC_NORMAL] = sizeof(tm_triangle_vertex_t);
             strides[TM_VERTEX_SEMANTIC_COLOR0] = sizeof(tm_triangle_vertex_t);
 
-            void *cbuf = (void *)&amp;constants;
+            const void *cbuf = (const void *)&amp;constants;
             tm_shader_api-&gt;update_constants_raw(io, res_buf, &amp;cbuffer-&gt;instance_id, &amp;cbuf, 0, sizeof(tm_shader_vertex_buffer_system_t), 1);
 
             uint32_t pos_buffer_slot, normal_buffer_slot, color_buffer_slot;
@@ -3933,7 +3933,6 @@ static struct tm_ui_api *tm_ui_api;
 static struct tm_temp_allocator_api *tm_temp_allocator_api;
 
 extern struct tm_the_truth_api *tm_the_truth_api;
-static struct tm_localizer_api *tm_localizer_api;
 
 #include &lt;foundation/allocator.h&gt;
 #include &lt;foundation/api_registry.h&gt;
