--- a/the_machinery_book/print.html
+++ b/the_machinery_book/print.html
@@ -5851,7 +5851,7 @@ static void my_custom_api_function(void){
 <p><em>When could this be useful?</em>
 It can be helpful on CI Server where build and test servers are different. The build server's final build step uploads the generated <code>dlls</code> to the test server if everything works fine. The test server is monitoring the filesystem, and whenever the dlls change, <code>unit-tests</code> would rerun all tests, also the slow ones, to ensure that all works. It could save time on the build server so the build times are faster and the developer knows quicker if the build fails. Also, the build server does not need a graphics card to run eventual graphic pipeline-related tests. The test server, on the other hand, could run such tests.</p>
 <h2 id="how-to-write-your-tests"><a class="header" href="#how-to-write-your-tests"><strong>How to write your tests</strong></a></h2>
-<p>All that is needed is to write tests is to register them via the <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#tm_unit_test_interface_name">TM_UNIT_TEST_INTERFACE_NAME</a>. You can find the interface in the <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html">unit_tests.h</a>. <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#tm_unit_test_interface_name">TM_UNIT_TEST_INTERFACE_NAME</a> expects a pointer of the type <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#structtm_unit_test_i">tm_unit_test_i</a>. This interface expects a name and a function pointer to the test entry function.</p>
+<p>All that is needed is to write tests is to register them via the <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#tm_unit_test_interface_name">tm_unit_test_i</a>. You can find the interface in the <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html">unit_tests.h</a>. <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#tm_unit_test_i">tm_unit_test_i</a> expects a pointer of the type <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#structtm_unit_test_i">tm_unit_test_i</a>. This interface expects a name and a function pointer to the test entry function.</p>
 <pre><code class="language-c">// Interface for running unit tests. To find all unit test, query the API registry for
 // `TM_UNIT_TEST_INTERFACE_NAME` implementations.
 typedef struct tm_unit_test_i
@@ -5880,10 +5880,10 @@ TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 {
     tm_global_api_registry = reg;
     //...
-    tm_add_or_remove_implementation(reg, load, TM_UNIT_TEST_INTERFACE_NAME, my_unit_tests);
+    tm_add_or_remove_implementation(reg, load, tm_unit_test_i, my_unit_tests);
 }
 </code></pre>
-<p>Here we register our test interface to the <code>TM_UNIT_TEST_INTERFACE_NAME</code>.</p>
+<p>Here we register our test interface to the <a href="https://ourmachinery.com/apidoc/foundation/unit_test.h.html#structtm_unit_test_i">tm_unit_test_i</a>.</p>
 <p><em>What could this interface look like?</em>
 After we have done this, all we need to do is declare our <code>my_unit_tests</code>. It is as easy as it gets:</p>
 <pre><code class="language-c">#include &lt;foundation/unit_test.h&gt;
@@ -5954,7 +5954,7 @@ It is generally used after unit testing to ensure that the composition of the so
 <p>The integration test framework can be found in the <a href="https://ourmachinery.com/apidoc/foundation/integration_test.h.html">integration_test.h</a> ,and is part of the foundation library. We need to include this header file, and then we can start writing our tests.</p>
 <pre><code>#include &lt;foundation/integration_test.h&gt;
 </code></pre>
-<p>To write a test you need to register it via the <a href="https://ourmachinery.com/apidoc/foundation/integration_test.h.html#tm_integration_test_interface_name">TM_INTEGRATION_TEST_INTERFACE_NAME</a>. It expects a pointer of the type <a href="https://ourmachinery.com/apidoc/foundation/integration_test.h.html#structtm_integration_test_i">tm_integration_test_i</a>. This interface expects a name and a function pointer to the test function (tick). Also, it expects a context. The context is a string hash. For example: <a href="https://ourmachinery.com/apidoc/foundation/integration_test.h.html#tm_integration_test_context__the_machinery_editor">TM_INTEGRATION_TEST_CONTEXT__THE_MACHINERY_EDITOR</a>.</p>
+<p>To write a test you need to register it via the <a href="https://ourmachinery.com/apidoc/foundation/integration_test.h.html#tm_integration_test_i">tm_integration_test_i</a>. It expects a pointer of the type <a href="https://ourmachinery.com/apidoc/foundation/integration_test.h.html#structtm_integration_test_i">tm_integration_test_i</a>. This interface expects a name and a function pointer to the test function (tick). Also, it expects a context. The context is a string hash. For example: <a href="https://ourmachinery.com/apidoc/foundation/integration_test.h.html#tm_integration_test_context__the_machinery_editor">TM_INTEGRATION_TEST_CONTEXT__THE_MACHINERY_EDITOR</a>.</p>
 <pre><code class="language-c">// Interface for integration tests.
 typedef struct tm_integration_test_i
 {
@@ -5982,10 +5982,10 @@ TM_DLL_EXPORT void tm_load_plugin(struct tm_api_registry_api *reg, bool load)
 {
     tm_global_api_registry = reg;
     //...
-    tm_add_or_remove_implementation(reg, load, TM_INTEGRATION_TEST_INTERFACE_NAME, my_integration_tests);
+    tm_add_or_remove_implementation(reg, load, tm_integration_test_i, my_integration_tests);
 }
 </code></pre>
-<p>Here we register our test interface to the <code>TM_INTEGRATION_TEST_INTERFACE_NAME</code>.</p>
+<p>Here we register our test interface to the <a href="https://ourmachinery.com/apidoc/foundation/integration_test.h.html#structtm_integration_test_i">tm_integration_test_i</a>.</p>
 <p><em>What could this interface look like?</em></p>
 <p>After we have done this, we need to declare our <code>my_integration_tests.</code> </p>
 <pre><code class="language-c">tm_integration_test_i my_integration_tests = {
