--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
   
   
-  <link type=text/css rel=stylesheet href="https://ourmachinery.github.io/themachinery-books/css/bootstrap.min.css" media="screen, print" />
-  <link type=text/css rel=stylesheet href="https://ourmachinery.github.io/themachinery-books/css/style.min.css" media="screen, print" />
+  <link type=text/css rel=stylesheet href="https://books.ourmachinery.com/css/bootstrap.min.css" media="screen, print" />
+  <link type=text/css rel=stylesheet href="https://books.ourmachinery.com/css/style.min.css" media="screen, print" />
+
 
   <link rel="canonical" href="https://ourmachinery.com/tutorials/" />
 
